# SkipLessonParser

./: .gitignore  LICENSE  README.md  pyproject.toml
skiplessonparser/: __init__.py
skiplessonparser/api/: aioparser.py  parser.py
skiplessonparser/api/base_models/: __init__.py  base_model.py
skiplessonparser/models/: __init__.py  auth_response.py  second_auth_model.py
tests/: aiotest.py
